user-charts/admin-newproject/templates/network/admin-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-metrics
spec:
  type: ClusterIP
  selector:
    app: admin-metrics
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
