user-charts/admin-newproject/templates/network/admin-metrics-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-test
spec:
  type: ClusterIP
  selector:
    app: metrics-test
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
