user-charts/admin-newproject/templates/network/admin-metricstest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metricstest
spec:
  type: ClusterIP
  selector:
    app: metricstest
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
